deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openshift-health-api
spec:
  selector:
    app.kubernetes.io/name: openshift-health-api
  ports:
    - name: http
      port: 8080
      targetPort: http
