deploy/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: openshift-health-api
spec:
  to:
    kind: Service
    name: openshift-health-api
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
