deploy/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: openshift-health-api
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: openshift-health-api
  policyTypes: [Ingress]
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
